landing-page__question-content

--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -1886,7 +1886,7 @@ Harlem, New York City"
                                   <div class="_19dmoalb">
                                     <div class="_7euvbh">
                                       <div
-                                        class="_9dd4bh"
+                                        class="landing-page__question-content"
                                         data-modal-content-id="faq-answer-0"
                                         data-modal-prefix-class="simple"
                                         data-modal-focus-toid="faq-modal-close-0"
@@ -1968,7 +1968,7 @@ Harlem, New York City"
                                         </div>
                                       </div>
                                       <div
-                                        class="_9dd4bh"
+                                        class="landing-page__question-content"
                                         data-modal-content-id="faq-answer-1"
                                         data-modal-prefix-class="simple"
                                         data-modal-focus-toid="faq-modal-close-1"
@@ -2076,7 +2076,7 @@ Harlem, New York City"
                                         </div>
                                       </div>
                                       <div
-                                        class="_9dd4bh"
+                                        class="landing-page__question-content"
                                         data-modal-content-id="faq-answer-2"
                                         data-modal-prefix-class="simple"
                                         data-modal-focus-toid="faq-modal-close-2"
@@ -2156,7 +2156,7 @@ Harlem, New York City"
                                         </div>
                                       </div>
                                       <div
-                                        class="_9dd4bh"
+                                        class="landing-page__question-content"
                                         data-modal-content-id="faq-answer-3"
                                         data-modal-prefix-class="simple"
                                         data-modal-focus-toid="faq-modal-close-3"
@@ -2261,7 +2261,7 @@ Harlem, New York City"
                                   <div class="_19dmoalb">
                                     <div class="_3xit3h">
                                       <div
-                                        class="_9dd4bh"
+                                        class="landing-page__question-content"
                                         data-modal-content-id="faq-answer-4"
                                         data-modal-prefix-class="simple"
                                         data-modal-focus-toid="faq-modal-close-4"
@@ -2345,7 +2345,7 @@ Harlem, New York City"
                                         </div>
                                       </div>
                                       <div
-                                        class="_9dd4bh"
+                                        class="landing-page__question-content"
                                         data-modal-content-id="faq-answer-5"
                                         data-modal-prefix-class="simple"
                                         data-modal-focus-toid="faq-modal-close-5"
@@ -2439,7 +2439,7 @@ Harlem, New York City"
                                         </div>
                                       </div>
                                       <div
-                                        class="_9dd4bh"
+                                        class="landing-page__question-content"
                                         data-modal-content-id="faq-answer-6"
                                         data-modal-prefix-class="simple"
                                         data-modal-focus-toid="faq-modal-close-6"
@@ -2533,7 +2533,7 @@ Harlem, New York City"
                                         </div>
                                       </div>
                                       <div
-                                        class="_9dd4bh"
+                                        class="landing-page__question-content"
                                         data-modal-content-id="faq-answer-7"
                                         data-modal-prefix-class="simple"
                                         data-modal-focus-toid="faq-modal-close-7"
