--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -1690,7 +1690,7 @@
                                           </svg></span></button></div>
                                   </div>
                                   <div class="_d5nsn8">
-                                    <div data-testid="support-thread-details" class="_9dd4bh">
+                                    <div data-testid="support-thread-details" class="landing-page__question-content">
                                       <div class="flex-items-center">
                                         <div class="_1ggggng"><svg viewBox="0 0 32 32"
                                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
