--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -16084,7 +16084,7 @@
                                                             <div class="_1ilrlnv">
                                                               <div class="_lk9qdq"><button
                                                                   aria-label="Scroll to Exterior" type="button"
-                                                                  class="_11eqlma4"
+                                                                  class="button-container__wrapper"
                                                                   data-scroll="#scrollTo_Exterior"
                                                                   >
                                                                   <div class="_11z41kk">
@@ -16117,7 +16117,7 @@
                                                             <div class="_1ilrlnv">
                                                               <div class="_lk9qdq"><button
                                                                   aria-label="Scroll to Outdoor common area"
-                                                                  type="button" class="_11eqlma4">
+                                                                  type="button" class="button-container__wrapper">
                                                                   <div class="_11z41kk">
                                                                     <div class="lite-image" role="img" aria-busy="false"
                                                                       aria-label="Outdoor common area image 1"
@@ -16147,7 +16147,7 @@
                                                           <div class="_c991cpe">
                                                             <div class="_1ilrlnv">
                                                               <div class="_lk9qdq"><button aria-label="Scroll to Patio"
-                                                                  type="button" class="_11eqlma4">
+                                                                  type="button" class="button-container__wrapper">
                                                                   <div class="_11z41kk">
                                                                     <div class="lite-image" role="img" aria-busy="false"
                                                                       aria-label="Patio image 1"
@@ -16178,7 +16178,7 @@
                                                             <div class="_1ilrlnv">
                                                               <div class="_lk9qdq"><button
                                                                   aria-label="Scroll to Living room 1" type="button"
-                                                                  class="_11eqlma4">
+                                                                  class="button-container__wrapper">
                                                                   <div class="_11z41kk">
                                                                     <div class="lite-image" role="img" aria-busy="false"
                                                                       aria-label="Living room 1 image 1"
@@ -16209,7 +16209,7 @@
                                                             <div class="_1ilrlnv">
                                                               <div class="_lk9qdq"><button
                                                                   aria-label="Scroll to Dining room 1" type="button"
-                                                                  class="_11eqlma4">
+                                                                  class="button-container__wrapper">
                                                                   <div class="_11z41kk">
                                                                     <div class="lite-image" role="img" aria-busy="false"
                                                                       aria-label="Dining room 1 image 1"
@@ -16240,7 +16240,7 @@
                                                             <div class="_1ilrlnv">
                                                               <div class="_lk9qdq"><button
                                                                   aria-label="Scroll to Full kitchen 1" type="button"
-                                                                  class="_11eqlma4">
+                                                                  class="button-container__wrapper">
                                                                   <div class="_11z41kk">
                                                                     <div class="lite-image" role="img" aria-busy="false"
                                                                       aria-label="Full kitchen 1 image 1"
@@ -16271,7 +16271,7 @@
                                                             <div class="_1ilrlnv">
                                                               <div class="_lk9qdq"><button
                                                                   aria-label="Scroll to Bedroom 1" type="button"
-                                                                  class="_11eqlma4">
+                                                                  class="button-container__wrapper">
                                                                   <div class="_11z41kk">
                                                                     <div class="lite-image" role="img" aria-busy="false"
                                                                       aria-label="Bedroom 1 image 1"
