--- a/listings-product/rental.html
+++ b/listings-product/rental.html
@@ -23901,7 +23901,7 @@
                               aria-label="Create new wishlist "
                               data-testid="save-to-list-modal-list-row-unsaved"
                               type="button"
-                              class="_11eqlma4"
+                              class="button-container__wrapper"
                             >
                               <div class="_1mz4hp0">
                                 <div
@@ -23961,7 +23961,7 @@
       aria-label="Save to 1st Wishlist Sep 3 – Sep 5"
       data-testid="save-to-list-modal-list-row-unsaved"
       type="button"
-      class="_11eqlma4"
+      class="button-container__wrapper"
     >
       <div class="_1mz4hp0">
         <div
@@ -24021,7 +24021,7 @@
       aria-label="Save to Orion "
       data-testid="save-to-list-modal-list-row-unsaved"
       type="button"
-      class="_11eqlma4"
+      class="button-container__wrapper"
     >
       <div class="_1mz4hp0">
         <div
@@ -24081,7 +24081,7 @@
       aria-label="Save to 22222 "
       data-testid="save-to-list-modal-list-row-unsaved"
       type="button"
-      class="_11eqlma4"
+      class="button-container__wrapper"
     >
       <div class="_1mz4hp0">
         <div
@@ -24141,7 +24141,7 @@
       aria-label="Save to 2 Sep 17 – Sep 22"
       data-testid="save-to-list-modal-list-row-unsaved"
       type="button"
-      class="_11eqlma4"
+      class="button-container__wrapper"
     >
       <div class="_1mz4hp0">
         <div
@@ -24201,7 +24201,7 @@
       aria-label="Save to Cooking "
       data-testid="save-to-list-modal-list-row-unsaved"
       type="button"
-      class="_11eqlma4"
+      class="button-container__wrapper"
     >
       <div class="_1mz4hp0">
         <div
@@ -24261,7 +24261,7 @@
       aria-label="Save to sept 3 Sep 3 – Sep 5"
       data-testid="save-to-list-modal-list-row-unsaved"
       type="button"
-      class="_11eqlma4"
+      class="button-container__wrapper"
     >
       <div class="_1mz4hp0">
         <div
@@ -24321,7 +24321,7 @@
       aria-label="Save to 5th "
       data-testid="save-to-list-modal-list-row-unsaved"
       type="button"
-      class="_11eqlma4"
+      class="button-container__wrapper"
     >
       <div class="_1mz4hp0">
         <div
@@ -24381,7 +24381,7 @@
       aria-label="Save to Concerts "
       data-testid="save-to-list-modal-list-row-unsaved"
       type="button"
-      class="_11eqlma4"
+      class="button-container__wrapper"
     >
       <div class="_1mz4hp0">
         <div
@@ -24441,7 +24441,7 @@
       aria-label="Save to Experiences "
       data-testid="save-to-list-modal-list-row-unsaved"
       type="button"
-      class="_11eqlma4"
+      class="button-container__wrapper"
     >
       <div class="_1mz4hp0">
         <div
