--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6709,7 +6709,7 @@
                           </div>
                           <div class="modal__items">
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="button" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="button" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"
                                         aria-hidden="true" role="presentation" focusable="false"
@@ -6723,7 +6723,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="link" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="link" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
@@ -6740,7 +6740,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="link" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="link" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
@@ -6765,7 +6765,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="link" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="link" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
@@ -6780,7 +6780,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="link" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="link" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
@@ -6807,7 +6807,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="link" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="link" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
@@ -6822,7 +6822,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="link" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="link" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
@@ -6837,7 +6837,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="button" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="button" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                         aria-hidden="true" role="presentation" focusable="false"
@@ -6913,7 +6913,7 @@
                           </div>
                           <div class="modal__items">
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="button" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="button" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true"
                                         role="presentation" focusable="false"
@@ -6927,7 +6927,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="link" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="link" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false"
@@ -6944,7 +6944,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="link" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="link" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false" style="display: block; height: 32px; width: 32px;">
@@ -6967,7 +6967,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="link" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="link" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false" style="display: block; height: 32px; width: 32px;">
@@ -6981,7 +6981,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="link" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="link" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false" style="display: block; height: 32px; width: 32px;">
@@ -7007,7 +7007,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="link" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="link" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false" style="display: block; height: 32px; width: 32px;">
@@ -7021,7 +7021,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="link" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="link" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false" style="display: block; height: 32px; width: 32px;">
@@ -7035,7 +7035,7 @@
                                 </button></div>
                             </div>
                             <div class="modal__share-item">
-                              <div class="modal__share-content"><button role="button" type="button" class="_11eqlma4">
+                              <div class="modal__share-content"><button role="button" type="button" class="button-container__wrapper">
                                   <div class="flex-items-center">
                                     <div class="modal__share-item-icon"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                         role="presentation" focusable="false"
