--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -441,7 +441,7 @@
                   </div>
                 </div>
                 <div class="t2pjd0h dir dir-ltr">
-                  <div class="t6qlz27 dir dir-ltr" data-testid="Incoming"></div>
+                  <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
                 </div>
                 <div
                   class="t1nrbpkt dir dir-ltr"
