--- a/listings-product/trips.html
+++ b/listings-product/trips.html
@@ -623,7 +623,7 @@
                   <div class="flex-before-after dir dir-ltr"></div>
                 </div>
                 <div class="t2pjd0h dir dir-ltr">
-                  <div class="t6qlz27 dir dir-ltr" data-testid="Incoming"></div>
+                  <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
                 </div>
                 <div
                   class="t1nrbpkt dir dir-ltr"
