--- a/loaders/messages-loader.html
+++ b/loaders/messages-loader.html
@@ -1824,7 +1824,7 @@
                 </div>
               </div>
               <div class="t2pjd0h dir dir-ltr">
-                <div class="t6qlz27 dir dir-ltr" data-testid="Incoming"></div>
+                <div class="incoming__wrapper dir dir-ltr" data-testid="Incoming"></div>
               </div>
               <div class="t1nrbpkt dir dir-ltr" data-transition-layer="true" aria-hidden="true" inert="true">
               </div>
