confirm-pay__price-total

--- a/payments/payment.html
+++ b/payments/payment.html
@@ -996,7 +996,7 @@
                                                         class="flex-content-between"
                                                       >
                                                         <div>
-                                                          <div class="_12hv04d">
+                                                          <div class="confirm-pay__price-total">
                                                             ₱49,950.00 x 3
                                                             nights
                                                           </div>
@@ -1013,7 +1013,7 @@
                                                         class="flex-content-between"
                                                       >
                                                         <div>
-                                                          <div class="_12hv04d">
+                                                          <div class="confirm-pay__price-total">
                                                             Service fee
                                                           </div>
                                                         </div>
